need to include long break option

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   </head>
 
   <body>
-    <!-- Help from: https://codeburst.io/making-a-calculator-with-basic-html-css-and-javascript-part-1-1e4288f0bea1 -->
     <div class="intro">
       <h1>Pomodoro</h1>
       <h2>Made by <a href="https://salvillalon45.github.io/">Salvador Villalon</a></h2>
@@ -20,6 +19,13 @@
     <div class="time-container">
       <!-- Here insert countdown timer -->
       <p class="time-text"></p>
+    </div>
+
+    <div class="checkmarks-container">
+      <div class="circle circle-0"></div>
+      <div class="circle circle-1"></div>
+      <div class="circle circle-2"></div>
+      <div class="circle circle-3"></div>
     </div>
 
     <div class="message-container">
